--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,18 @@
 {
-    "name": "kiwicommerce/magento2-inventory-log",
+    "name": "kiwicommerce/module-inventory-log",
     "description": "Magento 2 - Inventory Log",
     "type": "magento2-module",
     "version": "1.0.0",
     "license": [
         "OSL-3.0"
     ],
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Kiwi Commerce Ltd",
             "email": "hello@kiwicommerce.co.uk",
             "homepage": "https://kiwicommerce.co.uk/",
             "role": "Leader"
-        }
-    ],
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/kiwicommerce/magento2-inventory-log"
         }
     ],
     "autoload": {
